--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <label for="pesan" class="form-label">Example textarea</label>
                 <textarea class="form-control" id="pesan" rows="3"></textarea>
               </div>
-              <button type="submit" class="btn btn-primary">Kirim</button>
+              <button type="submit" class="btn btn-help">Kirim</button>
             </form>
           </div>
         </div>
