--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint asperiores adipisci reiciendis! Sequi eligendi repellendus fugit officiis explicabo saepe autem.</p>
-          </div>
-          <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis nisi ipsam voluptate consequuntur maiores expedita voluptatum asperiores praesentium delectus consectetur corporis, alias exercitationem deleniti accusamus.</p>
+            <p>
+              I’m from Indonesia and I have been working as a Programmer for more than 4 years. I’ve worked for a Telecommunications Company Smartfren as Data Analyst and back-end developer for 2 years, and currently I work for KPN
+              Corporation as a web designer and full-stack developer since 2020, and right now I am looking forward to collaborate with you!
+            </p>
           </div>
         </div>
       </div>
@@ -140,17 +140,17 @@
             <form>
               <div class="mb-3">
                 <label for="name" class="form-label">Nama Lengkap</label>
-                <input type="email" class="form-control" id="name" aria-describedby="name" />
+                <input type="text" class="form-control" id="name" aria-describedby="name" />
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
                 <input type="email" class="form-control" id="email" aria-describedby="email" />
               </div>
               <div class="mb-3">
-                <label for="pesan" class="form-label">Example textarea</label>
+                <label for="pesan" class="form-label">Messages</label>
                 <textarea class="form-control" id="pesan" rows="3"></textarea>
               </div>
-              <button type="submit" class="btn btn-info">Kirim</button>
+              <button type="submit" class="btn btn-primary">Send Messages</button>
             </form>
           </div>
         </div>
