--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
             <p>
-              I’m from Indonesia and I have been working as a Programmer for more than 4 years. I’ve worked for a Telecommunications Company Smartfren as Data Analyst and back-end developer for 2 years, and currently I work for KPN
-              Corporation as a web designer and full-stack developer since 2020, and right now I am looking forward to collaborate with you!
+              Hi, i'm Alfian Azis from Indonesia and I have been working as a Programmer for more than 4 years. I’ve worked for a Telecommunications Company Smartfren as Data Analyst and back-end developer for 2 years, and currently I work
+              for KPN Corporation as a web designer and full-stack developer since 2020, and right now I am looking forward to collaborate with you!
             </p>
           </div>
         </div>
