separate about text

--- a/index.html
+++ b/index.html
@@ -65,11 +65,13 @@
             <h2>About Me</h2>
           </div>
         </div>
-        <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-6">
+        <div class="row justify-content-center fs-5">
+          <div class="col-md-6a">
+            <p>Hi, i'm Alfian Azis from Indonesia</p>
+            <br />
             <p>
-              Hi, i'm Alfian Azis from Indonesia and I have been working as a Programmer for more than 4 years. I’ve worked for a Telecommunications Company Smartfren as Data Analyst and back-end developer for 2 years, and currently I work
-              for KPN Corporation as a web designer and full-stack developer since 2020, and right now I am looking forward to collaborate with you!
+              I have been working as a Programmer for more than 4 years. I’ve worked for a Telecommunications Company Smartfren as Data Analyst and back-end developer for 2 years, and currently I work for KPN Corporation as a web designer
+              and full-stack developer since 2020, and right now I am looking forward to collaborate with you!
             </p>
           </div>
         </div>
