update my project

--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
         <div class="row justify-content-center fs-5">
           <div class="col-md-6a">
             <p>Hi, i'm Alfian Azis from Indonesia</p>
-            <br />
             <p>
               I have been working as a Programmer for more than 4 years. I’ve worked for a Telecommunications Company Smartfren as Data Analyst and back-end developer for 2 years, and currently I work for KPN Corporation as a web designer
               and full-stack developer since 2020, and right now I am looking forward to collaborate with you!
@@ -98,15 +97,23 @@
             <div class="card">
               <img src="img/projects/1.jpg" class="card-img-top" alt="Project1" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-title">HC Information Systems, Develop of Human Resources Websites</h5>
+                <p class="card-text">
+                  This project is a develop of KPN Corp. human resources websites. KPN Corporation is an company who engaged in four main business divisions , namely : agriculture, cement and building materials, property, and international
+                  trading. Primarily based in Indonesia, and also business presence in Singapore, Vietnam, Sri Lanka, and Mauritius.
+                </p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
+              <h5 class="card-title">OPTIMIS, Develop of databases and back-end websites</h5>
               <img src="img/projects/2.jpg" class="card-img-top" alt="Project1" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">
+                  This project is a develop of Enterprise Business websites one of divisions at Smartfren. Smartfren is an telecommunications company based in Indonesia and the Enterprise Business is a one of divisions at Smartfren who
+                  provides postpaid services.
+                </p>
               </div>
             </div>
           </div>
