--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="img/my_image_rounded.png" />
@@ -44,9 +46,9 @@
     <!-- End Navbar -->
     <!-- Jumbotron -->
     <section class="jumbotron bg-dark text-center">
-      <img src="img/my_image.jpg" alt="Alfian Azis" width="200" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4 text-light">Alfian Azis</h1>
-      <p class="lead text-light mb-0">Programmer | Web Developer</p>
+      <img data-aos-delay="300" data-aos="fade-in" data-aos-duration="1000" src="img/my_image.jpg" alt="Alfian Azis" width="200" class="rounded-circle img-thumbnail" />
+      <h1 class="display-4 text-light" data-aos-delay="500" data-aos="fade-right" data-aos-duration="1000">Alfian Azis</h1>
+      <p class="lead text-light mb-0" data-aos-delay="500" data-aos="fade-left" data-aos-duration="1000">Programmer | Web Developer</p>
     </section>
     <!-- End Jumbotron -->
 
@@ -60,12 +62,12 @@
         ></path>
       </svg>
       <div id="about" class="container pad-top">
-        <div class="row text-center mb-3">
+        <div class="row text-center mb-3" data-aos="fade-down" data-aos-offset="200" data-aos-duration="1000">
           <div class="col">
             <h2>About Me</h2>
           </div>
         </div>
-        <div class="row justify-content-center fs-5">
+        <div class="row justify-content-center fs-5" data-aos-delay="500" data-aos="fade-right" data-aos-offset="210" data-aos-duration="1200">
           <div class="col-md-6a">
             <p>Hi, i'm Alfian Azis from Indonesia</p>
             <p>
@@ -87,13 +89,13 @@
     <!-- Project -->
     <section class="bg-dark text-light">
       <div id="projects" class="container pad-top">
-        <div class="row text-center mb-3">
+        <div class="row text-center mb-3" data-aos="fade-down" data-aos-offset="200" data-aos-duration="1000">
           <div class="col">
-            <h1>My Projects</h1>
+            <h2>My Projects</h2>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3" data-aos-delay="750" data-aos="fade-up" data-aos-offset="200" data-aos-duration="1000">
             <div class="card">
               <img src="img/projects/1.jpg" class="card-img-top" alt="Project1" />
               <div class="card-body">
@@ -105,7 +107,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3" data-aos-delay="1000" data-aos="fade-up" data-aos-offset="200" data-aos-duration="1000">
             <div class="card">
               <img src="img/projects/2.jpg" class="card-img-top" alt="Project1" />
               <div class="card-body">
@@ -117,7 +119,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3" data-aos-delay="1250" data-aos="fade-up" data-aos-offset="200" data-aos-duration="1000">
             <div class="card">
               <img src="img/projects/3.jpg" class="card-img-top" alt="Project1" />
               <div class="card-body">
@@ -139,7 +141,7 @@
         ></path>
       </svg>
       <div id="contact" class="container pad-top">
-        <div class="row text-center mb-3">
+        <div class="row text-center mb-3" data-aos="fade-down" data-aos-duration="1000">
           <div class="col">
             <h2>Contact Me</h2>
           </div>
@@ -147,19 +149,19 @@
         <div class="row justify-content-center">
           <div class="col-md-6">
             <form>
-              <div class="mb-3">
+              <div class="mb-3" data-aos-delay="750" data-aos="fade-right" data-aos-duration="750">
                 <label for="name" class="form-label">Nama Lengkap</label>
                 <input type="text" class="form-control" id="name" aria-describedby="name" />
               </div>
-              <div class="mb-3">
+              <div class="mb-3" data-aos-delay="1000" data-aos="fade-right" data-aos-duration="750">
                 <label for="email" class="form-label">Email</label>
                 <input type="email" class="form-control" id="email" aria-describedby="email" />
               </div>
-              <div class="mb-3">
+              <div class="mb-3" data-aos-delay="1250" data-aos="fade-right" data-aos-duration="750">
                 <label for="pesan" class="form-label">Messages</label>
                 <textarea class="form-control" id="pesan" rows="3"></textarea>
               </div>
-              <button type="submit" class="btn btn-primary">Send Messages</button>
+              <button data-aos-delay="1250" data-aos="fade-up" data-aos-duration="500" type="submit" class="btn btn-primary">Send Messages</button>
             </form>
           </div>
         </div>
@@ -179,5 +181,11 @@
     </footer>
     <!-- End Footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+  
   </body>
 </html>
