--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body id="home">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" data-aos="fade-down">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
         <img src="img/my_image.jpg" alt="Alfian Azis" width="35" class="rounded-circle me-2" />
         <a class="navbar-brand" href="#">Alfian Azis</a>
@@ -46,7 +46,7 @@
     <!-- End Navbar -->
     <!-- Jumbotron -->
     <section class="jumbotron bg-dark text-center">
-      <img data-aos-delay="300" data-aos="fade-in" src="img/my_image.jpg" alt="Alfian Azis" width="200" class="rounded-circle img-thumbnail" />
+      <img src="img/my_image.jpg" alt="Alfian Azis" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4 text-light" data-aos-delay="500" data-aos="fade-right">Alfian Azis</h1>
       <p class="lead text-light mb-0" data-aos-delay="500" data-aos="fade-left">Programmer | Web Developer</p>
     </section>
@@ -149,19 +149,19 @@
         <div class="row justify-content-center">
           <div class="col-md-6">
             <form>
-              <div class="mb-3" data-aos-delay="150" data-aos="fade-up">
+              <div class="mb-3" data-aos-delay="250" data-aos="fade-up">
                 <label for="name" class="form-label">Nama Lengkap</label>
                 <input type="text" class="form-control" id="name" aria-describedby="name" />
               </div>
-              <div class="mb-3" data-aos-delay="200" data-aos="fade-up">
+              <div class="mb-3" data-aos-delay="500" data-aos="fade-up">
                 <label for="email" class="form-label">Email</label>
                 <input type="email" class="form-control" id="email" aria-describedby="email" />
               </div>
-              <div class="mb-3" data-aos-delay="250" data-aos="fade-up">
+              <div class="mb-3" data-aos-delay="750" data-aos="fade-up">
                 <label for="pesan" class="form-label">Messages</label>
                 <textarea class="form-control" id="pesan" rows="3"></textarea>
               </div>
-              <button type="submit" class="btn btn-primary">Send Messages</button>
+              <button type="submit" data-aos-delay="950" data-aos="zoom-in" class="btn btn-primary">Send Messages</button>
             </form>
           </div>
         </div>
@@ -180,16 +180,14 @@
       <p>Created with <i class="bi bi-suit-heart-fill text-danger"></i> by <a href="https://www.instagram.com/alfiannurfatah/">Alfian Azis</a></p>
     </footer>
     <!-- End Footer -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
     <script>
-      const projectList = document.querySelectorAll('.project-list');
+      const projectList = document.querySelectorAll(".project-list");
 
-      projectList.forEach((list, i) =>{
-        list.dataset.aos = 'fade-up';
+      projectList.forEach((list, i) => {
+        list.dataset.aos = "fade-up";
         list.dataset.aosDelay = i * 300;
-
       });
 
       AOS.init({
@@ -197,6 +195,10 @@
         once: true,
       });
     </script>
-  
+    <script>
+      gsap.from(".jumbotron img", { duration: 1, y: -100, ease: "back(3)", opacity: 0 });
+      gsap.from(".navbar", { duration: 0.5, y: "-100%", opacity: 0 });
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
