--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     </script>
     <script>
       gsap.from(".jumbotron img", { duration: 1, y: -100, ease: "back(3)", opacity: 0 });
-      gsap.from(".navbar", { duration: 0.5, y: "-100%", opacity: 0 });
+//       gsap.from(".navbar", { duration: 0.5, y: "-100%", opacity: 0 });
     </script>
     
   </body>
