--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- End Navbar -->
     <!-- Jumbotron -->
     <section class="jumbotron bg-dark text-center">
-      <img src="img/my_image.jpg" alt="Alfian Azis" width="200" class="rounded-circle img-thumbnail" />
+      <img src="img/my_image.jpg" data-aos="fade-down" alt="Alfian Azis" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4 text-light" data-aos-delay="500" data-aos="fade-right">Alfian Azis</h1>
       <p class="lead text-light mb-0" data-aos-delay="500" data-aos="fade-left">Programmer | Web Developer</p>
     </section>
@@ -197,7 +197,7 @@
       });
     </script>
     <script>
-      gsap.from(".jumbotron img", { duration: 1, y: -100, ease: "back(3)", opacity: 0 });
+//       gsap.from(".jumbotron img", { duration: 1, y: -100, ease: "back(3)", opacity: 0 });
 //       gsap.from(".navbar", { duration: 0.5, y: "-100%", opacity: 0 });
     </script>
     
