--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body id="home">
     <!-- Navbar -->
-<!--     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top hidden-mobile">
       <div class="container">
         <img src="img/my_image.jpg" alt="Alfian Azis" width="35" class="rounded-circle me-2" />
         <a class="navbar-brand" href="#">Alfian Azis</a>
@@ -42,7 +42,7 @@
           </ul>
         </div>
       </div>
-    </nav> -->
+    </nav>
     <!-- End Navbar -->
     <!-- Jumbotron -->
     <section class="jumbotron bg-dark text-center">
