--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="img/my_image_rounded.png" />
+    <link rel="shortcut icon" href="img/my_image.png" />
     <title>Alfian | Web Developer</title>
   </head>
   <body id="home">
@@ -46,7 +46,7 @@
     <!-- End Navbar -->
     <!-- Jumbotron -->
     <section class="jumbotron bg-dark text-center">
-      <img src="img/my_image.jpg" data-aos="fade-down" alt="Alfian Azis" width="200" class="rounded-circle img-thumbnail" />
+      <img src="img/my_image.png" data-aos="fade-down" alt="Alfian Azis" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4 text-light" data-aos-delay="500" data-aos="fade-right">Alfian Azis</h1>
       <p class="lead text-light mb-0" data-aos-delay="500" data-aos="fade-left">Programmer | Web Developer</p>
     </section>
