--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top hidden-mobile">
       <div class="container">
-        <img src="img/my_image.jpg" alt="Alfian Azis" width="35" class="rounded-circle me-2" />
+        <img src="img/my_image.png" alt="Alfian Azis" width="35" class="rounded-circle me-2" />
         <a class="navbar-brand" href="#">Alfian Azis</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
