--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top hidden-mobile">
       <div class="container">
-        <img src="img/my_image.png" alt="Alfian Azis" width="35" />
+        <img src="img/my_image.png" alt="Alfian Azis" width="35" class="rounded-circle m-2" />
         <a class="navbar-brand" href="#">Alfian Azis</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -46,7 +46,7 @@
     <!-- End Navbar -->
     <!-- Jumbotron -->
     <section class="jumbotron bg-dark text-center">
-      <img src="img/my_image.png" data-aos="fade-down" alt="Alfian Azis" width="200" class="rounded-circle img-thumbnail" />
+      <img src="img/my_image.png" data-aos="fade-down" alt="Alfian Azis" width="200" class=" img-thumbnail" />
       <h1 class="display-4 text-light" data-aos-delay="500" data-aos="fade-right">Alfian Azis</h1>
       <p class="lead text-light mb-0" data-aos-delay="500" data-aos="fade-left">Programmer | Web Developer</p>
     </section>
