--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- End Navbar -->
     <!-- Jumbotron -->
     <section class="jumbotron bg-dark text-center">
-      <img src="img/my_image.png" data-aos="fade-down" alt="Alfian Azis" width="200" class=" img-thumbnail" />
+      <img src="img/my_image.png" data-aos="fade-down" alt="Alfian Azis" width="200" class="" />
       <h1 class="display-4 text-light" data-aos-delay="500" data-aos="fade-right">Alfian Azis</h1>
       <p class="lead text-light mb-0" data-aos-delay="500" data-aos="fade-left">Programmer | Web Developer</p>
     </section>
