--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   </head>
   <body id="home">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top hidden-mobile">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-gelap fixed-top hidden-mobile">
       <div class="container">
-        <img src="img/my_image.png" alt="Alfian Azis" width="35" class="rounded-circle m-2" />
+        <img src="img/my_image.png" alt="Alfian Azis" width="35" class="rounded-circle m-2 image" />
         <a class="navbar-brand" href="#">Alfian Azis</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -29,9 +29,6 @@
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#home">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#projects">Projects</a>
@@ -45,49 +42,59 @@
     </nav>
     <!-- End Navbar -->
     <!-- Jumbotron -->
-    <section class="jumbotron bg-dark text-center">
-      <img src="img/my_image.png" data-aos="fade-down" alt="Alfian Azis" width="200" class="" />
-      <h1 class="display-4 text-light" data-aos-delay="500" data-aos="fade-right">Alfian Azis</h1>
-      <p class="lead text-light mb-0" data-aos-delay="500" data-aos="fade-left">Programmer | Web Developer</p>
-    </section>
-    <!-- End Jumbotron -->
-
-    <!-- About -->
-    <section class="text-light bg-section">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#212529"
-          fill-opacity="1"
-          d="M0,288L0,128L120,128L120,160L240,160L240,192L360,192L360,64L480,64L480,224L600,224L600,192L720,192L720,128L840,128L840,256L960,256L960,32L1080,32L1080,192L1200,192L1200,96L1320,96L1320,128L1440,128L1440,0L1320,0L1320,0L1200,0L1200,0L1080,0L1080,0L960,0L960,0L840,0L840,0L720,0L720,0L600,0L600,0L480,0L480,0L360,0L360,0L240,0L240,0L120,0L120,0L0,0L0,0Z"
-        ></path>
-      </svg>
-      <div id="about" class="container pad-top">
-        <div class="row text-center mb-3" data-aos="fade-down" data-aos-offset="200">
-          <div class="col">
-            <h2>About Me</h2>
+    <section class="jumbotron bg-gelap text-light">
+      <div class="row flex-row-reverse">
+        <div class="col-md-5 text-center">
+          <div class="container pad-top">
+            <img src="img/my_image.png" data-aos="fade-down" alt="Alfian Azis" width="350" class="rounded-circle image" />
           </div>
         </div>
-        <div class="row justify-content-center fs-5" data-aos-delay="500" data-aos="fade-right" data-aos-offset="210">
-          <div class="col-md-6a">
-            <p>Hi, i'm Alfian Azis from Indonesia</p>
+        <div class="col container pad-top">
+          <div class="row margin" style="color: rgb(255, 76, 41)" data-aos="fade-right">
+            <h3 class="fw-bold verdana">Hi, i'm Alfian Azis</h3>
+          </div>
+          <div class="row margin" data-aos-delay="400" data-aos="fade-right">
+            <h1 class="fw-bold verdana">Programmer & UI/UX Designer</h1>
+          </div>
+          <div class="row fs-5 margin" data-aos-delay="600" data-aos="fade-right">
             <p>
               I have been working as a Programmer for more than 4 years. I’ve worked for a Telecommunications Company Smartfren as Data Analyst and back-end developer for 2 years, and currently I work for KPN Corporation as a web designer
               and full-stack developer since 2020, and right now I am looking forward to collaborate with you!
             </p>
           </div>
+          <div class="row fs-5 margin">
+            <div class="col-3 text-center">
+              <br />
+              <button type="button" class="btn btn-email btn-md"><i class="bi bi-envelope-fill"></i> Email Me</button>
+            </div>
+            <div class="col-3 text-center">
+              <br />
+              <a type="button" class="btn btn-social btn-md">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
+                  <path
+                    d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"
+                  />
+                </svg>
+              </a>
+            </div>
+            <div class="col-1 text-center">
+              <br />
+              <a type="button" class="btn btn-social btn-md" href="https://wa.me/+6282246336730">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
+                  <path
+                    d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"
+                  />
+                </svg>
+              </a>
+            </div>
+          </div>
         </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#212529"
-          fill-opacity="1"
-          d="M0,288L0,128L120,128L120,160L240,160L240,192L360,192L360,64L480,64L480,224L600,224L600,192L720,192L720,128L840,128L840,256L960,256L960,32L1080,32L1080,192L1200,192L1200,96L1320,96L1320,128L1440,128L1440,320L1320,320L1320,320L1200,320L1200,320L1080,320L1080,320L960,320L960,320L840,320L840,320L720,320L720,320L600,320L600,320L480,320L480,320L360,320L360,320L240,320L240,320L120,320L120,320L0,320L0,320Z"
-        ></path>
-      </svg>
+      <br /><br />
     </section>
-    <!-- End About -->
+    <!-- End Jumbotron -->
     <!-- Project -->
-    <section class="bg-dark text-light">
+    <section class="bg-gelap text-light">
       <div id="projects" class="container pad-top">
         <div class="row text-center mb-3" data-aos="fade-down" data-aos-offset="200">
           <div class="col">
@@ -135,7 +142,7 @@
     <section class="text-light bg-section">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#212529 "
+          fill="#082032 "
           fill-opacity="1"
           d="M0,32L0,32L130.9,32L130.9,288L261.8,288L261.8,160L392.7,160L392.7,256L523.6,256L523.6,288L654.5,288L654.5,224L785.5,224L785.5,288L916.4,288L916.4,192L1047.3,192L1047.3,224L1178.2,224L1178.2,256L1309.1,256L1309.1,160L1440,160L1440,0L1309.1,0L1309.1,0L1178.2,0L1178.2,0L1047.3,0L1047.3,0L916.4,0L916.4,0L785.5,0L785.5,0L654.5,0L654.5,0L523.6,0L523.6,0L392.7,0L392.7,0L261.8,0L261.8,0L130.9,0L130.9,0L0,0L0,0Z"
         ></path>
@@ -169,10 +176,10 @@
     </section>
     <!-- End Contact -->
     <!-- Footer -->
-    <footer class="bg-dark text-light text-center pb-4">
+    <footer class="bg-gelap text-light text-center pb-4">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#282d32"
+          fill="#2c394b"
           fill-opacity="1"
           d="M0,32L0,32L130.9,32L130.9,288L261.8,288L261.8,160L392.7,160L392.7,256L523.6,256L523.6,288L654.5,288L654.5,224L785.5,224L785.5,288L916.4,288L916.4,192L1047.3,192L1047.3,224L1178.2,224L1178.2,256L1309.1,256L1309.1,160L1440,160L1440,0L1309.1,0L1309.1,0L1178.2,0L1178.2,0L1047.3,0L1047.3,0L916.4,0L916.4,0L785.5,0L785.5,0L654.5,0L654.5,0L523.6,0L523.6,0L392.7,0L392.7,0L261.8,0L261.8,0L130.9,0L130.9,0L0,0L0,0Z"
         ></path>
@@ -197,9 +204,8 @@
       });
     </script>
     <script>
-//       gsap.from(".jumbotron img", { duration: 1, y: -100, ease: "back(3)", opacity: 0 });
-//       gsap.from(".navbar", { duration: 0.5, y: "-100%", opacity: 0 });
+      //       gsap.from(".jumbotron img", { duration: 1, y: -100, ease: "back(3)", opacity: 0 });
+      //       gsap.from(".navbar", { duration: 0.5, y: "-100%", opacity: 0 });
     </script>
-    
   </body>
 </html>
