--- a/index.html
+++ b/index.html
@@ -14,30 +14,29 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="img/my_image.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@500&display=swap" rel="stylesheet" />
     <title>Alfian | Web Developer</title>
   </head>
   <body id="home">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-gelap fixed-top hidden-mobile">
-      <div class="container">
-        <img src="img/my_image.png" alt="Alfian Azis" width="35" class="rounded-circle m-2 image" />
-        <a class="navbar-brand" href="#">Alfian Azis</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#home">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#projects">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact Me</a>
-            </li>
-          </ul>
-        </div>
+    <!-- hidden-mobile -->
+    <nav>
+      <div class="logo">
+        <img src="img/my_image.png" alt="Alfian Azis" width="35" class="rounded-circle image" />
+      </div>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact Me</a></li>
+      </ul>
+
+      <div class="menu-toggle">
+        <input type="checkbox" />
+        <span></span>
+        <span></span>
+        <span></span>
       </div>
     </nav>
     <!-- End Navbar -->
@@ -45,11 +44,11 @@
     <section class="jumbotron bg-gelap text-light">
       <div class="row flex-row-reverse">
         <div class="col-md-5 text-center">
-          <div class="container pad-top">
-            <img src="img/my_image.png" data-aos="fade-down" alt="Alfian Azis" width="350" class="rounded-circle image" />
+          <div class="container">
+            <img src="img/my_image.png" data-aos="fade-down" alt="Alfian Azis" class="rounded-circle image-banner" />
           </div>
         </div>
-        <div class="col container pad-top">
+        <div class="col container">
           <div class="row margin" style="color: rgb(255, 76, 41)" data-aos="fade-right">
             <h3 class="fw-bold verdana">Hi, i'm Alfian Azis</h3>
           </div>
@@ -63,11 +62,11 @@
             </p>
           </div>
           <div class="row fs-5 margin">
-            <div class="col-3 text-center">
+            <div class="col-md-3 text-center">
               <br />
               <button type="button" class="btn btn-email btn-md"><i class="bi bi-envelope-fill"></i> Email Me</button>
             </div>
-            <div class="col-3 text-center">
+            <div class="col-md-2 text-center">
               <br />
               <a type="button" class="btn btn-social btn-md">
                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
@@ -77,7 +76,7 @@
                 </svg>
               </a>
             </div>
-            <div class="col-1 text-center">
+            <div class="col-md-1 text-center">
               <br />
               <a type="button" class="btn btn-social btn-md" href="https://wa.me/+6282246336730">
                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
@@ -187,6 +186,7 @@
       <p>Created with <i class="bi bi-suit-heart-fill text-danger"></i> by <a href="https://www.instagram.com/alfiannurfatah/">Alfian Azis</a></p>
     </footer>
     <!-- End Footer -->
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
@@ -198,6 +198,12 @@
         list.dataset.aosDelay = i * 300;
       });
 
+      const menuList = document.querySelectorAll(".slide-li");
+
+      menuList.forEach((listLi, i) => {
+        listLi.dataset.aos = "fade-up";
+        listLi.dataset.aosDelay = i * 300;
+      });
       AOS.init({
         duration: 1000,
         once: true,
