--- a/index.html
+++ b/index.html
@@ -16,16 +16,17 @@
     <link rel="shortcut icon" href="img/my_image.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@500&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@700&display=swap" rel="stylesheet" />
     <title>Alfian | Web Developer</title>
   </head>
   <body id="home">
     <!-- Navbar -->
     <!-- hidden-mobile -->
-    <nav>
-      <div class="logo">
+    <nav class="container-fluid">
+      <a class="navbar-brand" href="https://alfian-nfa.github.io/alfian.github.io">
         <img src="img/my_image.png" alt="Alfian Azis" width="35" class="rounded-circle image" />
-      </div>
+        <label style="padding-left: 5px; font-family: 'Urbanist', sans-serif; color: white; cursor: pointer">Alfian</label>
+      </a>
       <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#projects">Projects</a></li>
