update element animation

--- a/index.html
+++ b/index.html
@@ -44,12 +44,47 @@
     <!-- Jumbotron -->
     <section class="jumbotron bg-gelap text-light">
       <div class="row flex-row-reverse">
-        <div class="col-md-5 text-center">
-          <div class="container">
-            <img src="img/my_image.png" data-aos="fade-down" alt="Alfian Azis" class="rounded-circle image-banner" />
+        <div class="col-md-5 text-center banner">
+          <div class="layer-0">
+            <img src="img/my_image.png" data-aos="fade-in" data-aos-delay="1300" alt="Alfian Azis" class="rounded-circle image-banner" />
+          </div>
+          <div class="layer-1">
+            <svg xmlns="http://www.w3.org/2000/svg" data-aos="fade-s" data-aos-delay="500" viewBox="0 0 40 40" fill="none">
+              <path d="M19.3205 15.1804L1.72503 20.7006L5.86514 2.41506L19.3205 15.1804ZM21.6758 15.7204L5.32149 -5.05883e-05L6.96733e-06 22.4105L21.67a58 15.7204Z" fill="#ff4c29"></path>
+            </svg>
+          </div>
+
+          <div class="layer-2">
+            <svg xmlns="http://www.w3.org/2000/svg" data-aos="zoom-in-down" data-aos-delay="600" viewBox="0 0 82 83" fill="none">
+              <path
+                d="M41.19 2.8217C46.3911 2.8217 51.4355 3.83986 56.183 5.84789C58.465 6.81308 60.6661 8.00785 62.7253 9.39899C64.7654 10.7773 66.6839 12.3602 68.4276 14.1039C70.1712 15.8475 71.7541 17.766 73.1324 19.8062C74.5236 21.8653 75.7183 24.0665 76.6835 26.3485C78.6916 31.096 79.7097 36.1403 79.7097 41.3414C79.7097 46.5425 78.6916 51.5868 76.6835 56.3344C75.7183 58.6163 74.5236 60.8175 73.1324 62.8766C71.7541 64.9168 70.1712 66.8353 68.4276 68.579C66.6839 70.3226 64.7654 71.9055 62.7253 73.2838C60.6661 74.675 58.465 75.8697 56.183 76.8349C51.4355 78.843 46.3911 79.8611 41.19 79.8611C35.989 79.8611 30.9446 78.843 26.1971 76.8349C23.9151 75.8697 21.714 74.675 19.6548 73.2838C17.6147 71.9055 15.6961 70.3226 13.9525 68.579C12.2089 66.8353 10.626 64.9168 9.24767 62.8766C7.85652 60.8175 6.66176 58.6164 5.69657 56.3344C3.68854 51.5868 2.67038 46.5425 2.67038 41.3414C2.67038 36.1403 3.68854 31.096 5.69657 26.3485C6.66176 24.0665 7.85652 21.8653 9.24767 19.8062C10.626 17.766 12.2089 15.8475 13.9525 14.1039C15.6961 12.3602 17.6147 10.7773 19.6548 9.39899C21.714 8.00785 23.9151 6.81308 26.1971 5.84789C30.9446 3.83986 35.989 2.8217 41.19 2.8217ZM41.19 0.676956C18.7317 0.676956 0.525635 18.8831 0.525635 41.3414C0.525635 63.7998 18.7317 82.0059 41.19 82.0059C63.6484 82.0059 81.8545 63.7998 81.8545 41.3414C81.8545 18.8831 63.6484 0.676956 41.19 0.676956Z"
+                fill="#334756"
+              ></path>
+            </svg>
+          </div>
+          <div class="layer-3"></div>
+          <div class="layer-3a">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 148 148" fill="none">
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M145.135 50.5622L50.5623 2.68769L2.68778 97.2606L97.2607 145.135L145.135 50.5622ZM49.6812 0L8.90493e-05 98.1417L98.1418 147.823L147.823 49.6811L49.6812 0Z"
+                fill="#082032"
+              ></path>
+            </svg>
+          </div>
+          <div class="layer-3b">
+            <svg xmlns="http://www.w3.org/2000/svg" data-aos="zoom-in-up" data-aos-delay="1300" viewBox="0 0 148 148" fill="none">
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M145.135 50.5622L50.5623 2.68769L2.68778 97.2606L97.2607 145.135L145.135 50.5622ZM49.6812 0L8.90493e-05 98.1417L98.1418 147.823L147.823 49.6811L49.6812 0Z"
+                fill="#ff4c29"
+              ></path>
+            </svg>
           </div>
         </div>
-        <div class="col container">
+        <div class="col container pad-top">
           <div class="row margin" style="color: rgb(255, 76, 41)" data-aos="fade-right">
             <h3 class="fw-bold verdana">Hi, i'm Alfian Azis</h3>
           </div>
@@ -63,11 +98,11 @@
             </p>
           </div>
           <div class="row fs-5 margin">
-            <div class="col-md-3 text-center">
+            <div class="col-md-3 text-center btn-animate">
               <br />
               <button type="button" class="btn btn-email btn-md"><i class="bi bi-envelope-fill"></i> Email Me</button>
             </div>
-            <div class="col-md-2 text-center">
+            <div class="col-md-2 text-center" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="1400">
               <br />
               <a type="button" class="btn btn-social btn-md">
                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
@@ -77,7 +112,7 @@
                 </svg>
               </a>
             </div>
-            <div class="col-md-1 text-center">
+            <div class="col-md-1 text-center" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="1200">
               <br />
               <a type="button" class="btn btn-social btn-md" href="https://wa.me/+6282246336730">
                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
@@ -95,7 +130,7 @@
     <!-- End Jumbotron -->
     <!-- Project -->
     <section class="bg-gelap text-light">
-      <div id="projects" class="container pad-top">
+      <div id="projects" class="container pad-top2">
         <div class="row text-center mb-3" data-aos="fade-down" data-aos-offset="200">
           <div class="col">
             <h2>My Projects</h2>
@@ -147,7 +182,7 @@
           d="M0,32L0,32L130.9,32L130.9,288L261.8,288L261.8,160L392.7,160L392.7,256L523.6,256L523.6,288L654.5,288L654.5,224L785.5,224L785.5,288L916.4,288L916.4,192L1047.3,192L1047.3,224L1178.2,224L1178.2,256L1309.1,256L1309.1,160L1440,160L1440,0L1309.1,0L1309.1,0L1178.2,0L1178.2,0L1047.3,0L1047.3,0L916.4,0L916.4,0L785.5,0L785.5,0L654.5,0L654.5,0L523.6,0L523.6,0L392.7,0L392.7,0L261.8,0L261.8,0L130.9,0L130.9,0L0,0L0,0Z"
         ></path>
       </svg>
-      <div id="contact" class="container pad-top">
+      <div id="contact" class="container pad-top2">
         <div class="row text-center mb-3" data-aos="fade-down">
           <div class="col">
             <h2>Contact Me</h2>
