--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <div class="row fs-5 margin">
             <div class="col-md-3 text-center btn-animate">
               <br />
-              <button type="button" class="btn btn-email btn-md"><i class="bi bi-envelope-fill"></i> Email Me</button>
+              <a type="button" class="btn btn-email btn-md" href="mailto:alfian.azis95@gmail.com"><i class="bi bi-envelope-fill"></i> Email Me</a>
             </div>
             <div class="col-md-2 text-center" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="1400">
               <br />
