--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     </script>
     <script type="text/javascript" src="vanilla-tilt.js"></script>
     <script type="text/javascript">
-      VanillaTilt.init(document.querySelector(".image"), {
+      VanillaTilt.init(document.querySelector(".image-banner"), {
         max: 25,
         speed: 400
       });
