--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     </script>
     <script type="text/javascript" src="vanilla-tilt.js"></script>
     <script type="text/javascript">
-      VanillaTilt.init(document.querySelector("#circle"), {
+      VanillaTilt.init(document.querySelector(".layer-1"),document.querySelector(".layer-2"),document.querySelector(".layer-3"), {
         max: 25,
         speed: 400
       });
