--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
           </div>
           <div class="row fs-5 margin" data-aos-delay="600" data-aos="fade-right">
             <p>
-              I have been working as a Programmer for more than 4 years. I’ve worked for a Telecommunications Company Smartfren as Data Analyst and back-end developer for 2 years, and currently I work for KPN Corporation as a web designer
-              and full-stack developer since 2020, and right now I am looking forward to collaborate with you!
+              I have been working as a Programmer for more than 4 years. I’ve worked for a Telecommunications Company as Full-stack developer for 2 years, and currently I work for Corporation Company as a web designer
+              and Full-stack developer since 2020, and right now I am looking forward to collaborate with you!
             </p>
           </div>
           <div class="row fs-5 margin">
