--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
     <!-- Jumbotron -->
     <section class="jumbotron bg-gelap text-light">
       <div class="row flex-row-reverse">
-        <div class="col-md-5 text-center bg-banner data-tilt data-tilt-full-page-listening">
+        <div class="col-md-5 text-center bg-banner">
           <div class="layer-0">
             <img src="img/my_image.png" data-aos="fade-in" data-aos-delay="1300" alt="Alfian Azis" class="rounded-circle image-banner" />
           </div>
-          <div class="layer-1">
+          <div class="layer-1 data-tilt data-tilt-full-page-listening data-tilt-max='30' data-tilt-speed='300' data-tilt-reverse='true'">
             <svg xmlns="http://www.w3.org/2000/svg" data-aos="fade-in" data-aos-delay="500" viewBox="0 0 40 40" fill="none">
               <path d="M19.3205 15.1804L1.72503 20.7006L5.86514 2.41506L19.3205 15.1804ZM21.6758 15.7204L5.32149 -5.05883e-05L6.96733e-06 22.4105L21.67a58 15.7204Z" fill="#ff4c29"></path>
             </svg>
@@ -207,11 +207,5 @@
       //       gsap.from(".navbar", { duration: 0.5, y: "-100%", opacity: 0 });
     </script>
     <script type="text/javascript" src="vanilla-tilt.js"></script>
-    <script type="text/javascript">
-      VanillaTilt.init(document.querySelector(".layer-1"), {
-        max: 25,
-        speed: 300
-      });
-    </script>
   </body>
 </html>
