--- a/index.html
+++ b/index.html
@@ -209,8 +209,13 @@
     <script type="text/javascript" src="vanilla-tilt.js"></script>
     <script type="text/javascript">
       VanillaTilt.init(document.querySelector(".layer-1"), {
+        max: 35,
+        speed: 200
+      });
+      
+      VanillaTilt.init(document.querySelector(".layer-3b"), {
         max: 15,
-        speed: 300
+        speed: 500
       });
     </script>
   </body>
