--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               ></path>
             </svg>
           </div>
-          <div class="layer-3b">
+          <div class="layer-3b" data-tilt data-tilt-full-page-listening>
             <svg xmlns="http://www.w3.org/2000/svg" data-aos="zoom-in-up" data-aos-delay="1300" viewBox="0 0 148 148" fill="none">
               <path
                 fill-rule="evenodd"
