--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             <img src="img/my_image.png" data-aos="fade-in" data-aos-delay="1300" alt="Alfian Azis" class="rounded-circle image-banner" />
           </div>
           <div class="layer-1" data-tilt data-tilt-full-page-listening>
-            <svg xmlns="http://www.w3.org/2000/svg" data-aos="fade-in" data-aos-delay="500" viewBox="0 0 40 40" fill="none">
-              <path d="M19.3205 15.1804L1.72503 20.7006L5.86514 2.41506L19.3205 15.1804ZM21.6758 15.7204L5.32149 -5.05883e-05L6.96733e-06 22.4105L21.67a58 15.7204Z" fill="#ff4c29"></path>
+            <svg xmlns="http://www.w3.org/2000/svg" width="174" height="150" viewBox="0 0 174 150" fill="none">
+              <path d="M6.45964 146.5L87 7L167.54 146.5H6.45964Z" stroke="#FF4C29" stroke-width="7"/>
             </svg>
           </div>
 
@@ -74,13 +74,8 @@
             </svg>
           </div>
           <div class="layer-3b" data-tilt data-tilt-full-page-listening>
-            <svg xmlns="http://www.w3.org/2000/svg" data-aos="zoom-in-up" data-aos-delay="1300" viewBox="0 0 148 148" fill="none">
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M145.135 50.5622L50.5623 2.68769L2.68778 97.2606L97.2607 145.135L145.135 50.5622ZM49.6812 0L8.90493e-05 98.1417L98.1418 147.823L147.823 49.6811L49.6812 0Z"
-                fill="#ff4c29"
-              ></path>
+            <svg xmlns="http://www.w3.org/2000/svg" width="120" height="120" viewBox="0 0 120 120" fill="none">
+              <rect x="1.5" y="1.5" width="117" height="117" stroke="#FF4C29" stroke-width="3"/>
             </svg>
           </div>
         </div>
