--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="layer-0">
             <img src="img/my_image.png" data-aos="fade-in" data-aos-delay="1300" alt="Alfian Azis" class="rounded-circle image-banner" />
           </div>
-          <div class="layer-1" data-tilt data-tilt-full-page-listening>
+          <div class="layer-1">
             <svg xmlns="http://www.w3.org/2000/svg" data-aos="zoom-in" data-aos-delay="400" width="134" height="110" viewBox="0 0 174 150" fill="none">
               <path d="M6.45964 146.5L87 7L167.54 146.5H6.45964Z" stroke="#FF4C29" stroke-width="7"/>
             </svg>
