--- a/index.html
+++ b/index.html
@@ -64,13 +64,8 @@
           </div>
           <div class="layer-3" data-tilt data-tilt-full-page-listening></div>
           <div class="layer-3a" data-tilt data-tilt-full-page-listening>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 148 148" fill="none">
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M145.135 50.5622L50.5623 2.68769L2.68778 97.2606L97.2607 145.135L145.135 50.5622ZM49.6812 0L8.90493e-05 98.1417L98.1418 147.823L147.823 49.6811L49.6812 0Z"
-                fill="#082032"
-              ></path>
+            <svg xmlns="http://www.w3.org/2000/svg" width="120" height="120" viewBox="0 0 120 120" fill="none">
+              <rect x="1" y="1" width="118" height="118" stroke="#082032" stroke-width="2"/>
             </svg>
           </div>
           <div class="layer-3b" data-tilt data-tilt-full-page-listening>
