--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
     <section class="jumbotron bg-gelap text-light">
       <div class="row flex-row-reverse">
         <div class="col-md-5 text-center bg-banner">
-          <div class="layer-0" data-tilt data-tilt-full-page-listening>
+          <div class="layer-0" data-tilt-full-page-listening>
             <img src="img/my_image.png" data-aos="fade-in" data-aos-delay="1000" alt="Alfian Azis" class="rounded-circle image-banner" />
           </div>
-          <div class="layer-1" data-tilt data-tilt-full-page-listening>
+          <div class="layer-1" data-tilt-full-page-listening>
             <svg xmlns="http://www.w3.org/2000/svg" data-aos="fade-in" data-aos-delay="500" width="134" height="110" viewBox="0 0 174 150" fill="none">
               <path d="M6.45964 146.5L87 7L167.54 146.5H6.45964Z" stroke="#FF4C29" stroke-width="7"/>
             </svg>
@@ -62,13 +62,13 @@
               ></path>
             </svg>
           </div>
-          <div class="layer-3" data-tilt data-tilt-full-page-listening></div>
-          <div class="layer-3a" data-tilt data-tilt-full-page-listening>
+          <div class="layer-3" data-tilt-full-page-listening></div>
+          <div class="layer-3a" data-tilt-full-page-listening>
             <svg xmlns="http://www.w3.org/2000/svg" data-aos="fade-in" data-aos-delay="200" width="125" height="125" viewBox="0 0 125 125" fill="none">
               <rect x="1" y="1" width="123" height="123" stroke="#082032" stroke-width="2"/>
             </svg>
           </div>
-          <div class="layer-3b" data-tilt data-tilt-full-page-listening>
+          <div class="layer-3b" data-tilt-full-page-listening>
             <svg xmlns="http://www.w3.org/2000/svg" data-aos="zoom-in" data-aos-delay="400" width="83" height="83" viewBox="0 0 83 83" fill="none">
               <rect x="1.5" y="1.5" width="80" height="80" stroke="#FF4C29" stroke-width="3"/>
             </svg>
