--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         speed: 100,
       });
       
-      w<'1028' ? destroyBox.vanillaTilt.destroy() : VanillaTilt.init(destroyBox);;
+      w<'1028' ? destroyBox.vanillaTilt.destroy() : VanillaTilt.init(destroyBox);
       
     </script>
   </body>
