--- a/index.html
+++ b/index.html
@@ -215,5 +215,11 @@
       w<'1028' ? destroyBox.vanillaTilt.destroy() : VanillaTilt.init(destroyBox);
       
     </script>
+    <script type="text/javascript">
+            if ($(window).width() < 480) {
+alert('Less than 480');
+// do something else instead of tilt or change options
+}
+      </script>
   </body>
 </html>
