--- a/index.html
+++ b/index.html
@@ -219,6 +219,9 @@
             if ($(window).width() < 480) {
 alert('Less than 480');
 // do something else instead of tilt or change options
+}else {
+alert('More than 480');
+// run the tilt
 }
       </script>
   </body>
