--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@700&display=swap" rel="stylesheet" />
     <title>Alfian | Web Developer</title>
+    <script type="text/javascript">
+      const w = window.innerWidth;
+            if ($(window).w < 480) {
+      alert('Less than 480');
+      // do something else instead of tilt or change options
+      }else {
+      alert('More than 480');
+      // run the tilt
+      }
+      </script>
   </head>
   <body id="home">
     <!-- Navbar -->
@@ -215,14 +225,6 @@
       w<'1028' ? destroyBox.vanillaTilt.destroy() : VanillaTilt.init(destroyBox);
       
     </script>
-    <script type="text/javascript">
-            if ($(window).width() < 480) {
-alert('Less than 480');
-// do something else instead of tilt or change options
-}else {
-alert('More than 480');
-// run the tilt
-}
-      </script>
+    
   </body>
 </html>
