--- a/index.html
+++ b/index.html
@@ -216,12 +216,12 @@
       
     </script>
     <script type="text/javascript">
-      if ($(window).width() < 960) {
+//       if ($(window).width() < 960) {
          alert('Less than 960');
-      }
-      else {
-         alert('More than 960');
-      }
+//       }
+//       else {
+//          alert('More than 960');
+//       }
       </script>
   </body>
 </html>
