--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         speed: 100,
       });
       
-      let destroyBox = document.querySelector("#bg-banner");
+      let destroyBox = document.querySelector(".bg-banner");
       VanillaTilt.init(destroyBox);
 
       document.querySelector("#destroy-button").addEventListener("click", function () {
