--- a/index.html
+++ b/index.html
@@ -136,22 +136,10 @@
             <div class="card project-list">
               <img src="img/projects/1.jpg" class="card-img-top" alt="Project1" />
               <div class="card-body">
-                <h5 class="card-title">HC Information Systems, Develop of Human Resources Websites</h5>
+                <h5 class="card-title"><b>Human Capital Information Systems</b><br> Create & developing Human Capital web app</h5>
                 <p class="card-text">
-                  This project is a develop of KPN Corp. human resources websites. KPN Corporation is an company who engaged in four main business divisions , namely : agriculture, cement and building materials, property, and international
+                  This project is a develop of KPN Corp. human capital web app. KPN Corporation is an company who engaged in four main business divisions , namely : agriculture, cement and building materials, property, and international
                   trading. Primarily based in Indonesia, and also business presence in Singapore, Vietnam, Sri Lanka, and Mauritius.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-3">
-            <div class="card project-list">
-              <img src="img/projects/2.jpg" class="card-img-top" alt="Project1" />
-              <div class="card-body">
-                <h5 class="card-title">OPTIMIS, Develop of databases and back-end websites</h5>
-                <p class="card-text">
-                  This project is a develop of Enterprise Business websites one of divisions at Smartfren. Smartfren is an telecommunications company based in Indonesia and the Enterprise Business is a one of divisions at Smartfren who
-                  provides postpaid services.
                 </p>
               </div>
             </div>
@@ -160,7 +148,20 @@
             <div class="card project-list">
               <img src="img/projects/3.jpg" class="card-img-top" alt="Project1" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-title"><b>KPN Recruitment</b><br> Create & developing recruitment web app for KPN Corp.</h5>
+                <p class="card-text">This project is is a necessity which will make it easier for the recruitment department at KPN corp to collect data & process the recruitment of prospective employees who will later work at KPN Corp.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card project-list">
+              <img src="img/projects/2.jpg" class="card-img-top" alt="Project1" />
+              <div class="card-body">
+                <h5 class="card-title"><b>OPTIMIS</b><br> Develop of databases and back-end websites</h5>
+                <p class="card-text">
+                  This project is a develop of Enterprise Business websites one of divisions at Smartfren. Smartfren is an telecommunications company based in Indonesia and the Enterprise Business is a one of divisions at Smartfren who
+                  provides postpaid services.
+                </p>
               </div>
             </div>
           </div>
