--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
           </div>
           <div class="row fs-5 margin" data-aos-delay="600" data-aos="fade-right">
             <p>
-              I have been working as a Programmer for more than 4 years. I’ve worked for a Telecommunications Company as Full-stack developer for 2 years, and currently I work for Corporation Company as a web designer
-              and Full-stack developer since 2020, and right now I am looking forward to collaborate with you!
+              I have been working as a Programmer for more than 4 years. I’ve worked for a Telecommunications Company as Full-stack developer for 2 years, and currently I work for Holding Company as a Web Developer since 2020, and right now I am looking forward to collaborate with you!
             </p>
           </div>
           <div class="row fs-5 margin">
