--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="card project-list">
               <img src="img/projects/1.jpg" class="card-img-top" alt="Project1" />
               <div class="card-body">
-                <h5 class="card-title"><b>Human Capital Information Systems</b><br> Create & developing Human Capital web app</h5>
+                <h5 class="card-title"><b>Human Capital Apps</b><br> Create & developing Human Capital web app</h5>
                 <p class="card-text line-clamp">
                   This project is a develop of KPN Corp. human capital web app. KPN Corporation is an company who engaged in four main business divisions , namely : agriculture, cement and building materials, property, and international
                   trading. Primarily based in Indonesia, and also business presence in Singapore, Vietnam, Sri Lanka, and Mauritius.
